# measure-clocks

./: Cargo.toml  parse-results.py  run-measurement.sh
results/: Darwin-Apple_M4_Max-2025-07-21_02-33-00.txt  Darwin-Apple_M4_Max-2025-07-21_02-33-16.txt  Darwin-Apple_M4_Max-2025-07-21_02-33-31.txt  Darwin-Apple_M4_Max-2025-07-21_02-33-47.txt  Darwin-Apple_M4_Max-2025-07-21_02-34-03.txt  Darwin-Apple_M4_Max-2025-07-21_02-34-19.txt  Darwin-Apple_M4_Max-2025-07-21_02-34-35.txt  Darwin-Apple_M4_Max-2025-07-21_02-34-51.txt  Darwin-Apple_M4_Max-2025-07-21_02-35-11.txt  Darwin-Apple_M4_Max-2025-07-21_02-35-27.txt  Darwin-Apple_M4_Max-2025-07-21_02-36-35.txt  Darwin-Apple_M4_Max-2025-07-21_02-36-51.txt  Darwin-Apple_M4_Max-2025-07-21_02-37-07.txt  Darwin-Apple_M4_Max-2025-07-21_02-37-23.txt  Darwin-Apple_M4_Max-2025-07-21_02-37-39.txt  Darwin-Apple_M4_Max-2025-07-21_02-37-56.txt  Darwin-Apple_M4_Max-2025-07-21_02-38-12.txt  Darwin-Apple_M4_Max-2025-07-21_02-38-28.txt  Darwin-Apple_M4_Max-2025-07-21_02-38-45.txt  Darwin-Apple_M4_Max-2025-07-21_02-39-01.txt  Darwin-Apple_M4_Max-2025-07-21_02-41-32.txt  Darwin-Apple_M4_Max-2025-07-21_02-41-48.txt  Darwin-Apple_M4_Max-2025-07-21_02-42-06.txt  Darwin-Apple_M4_Max-2025-07-21_02-42-22.txt  Darwin-Apple_M4_Max-2025-07-21_02-42-40.txt  Darwin-Apple_M4_Max-2025-07-21_02-42-57.txt  Darwin-Apple_M4_Max-2025-07-21_02-43-13.txt  (+420 more)
results-summaries/: Darwin-Apple_M4_Max.txt  Linux-AMD_EPYC_3151.txt  Linux-Intel(R)_Xeon(R)_CPU_E5-2698_v4_@_2.20GHz.txt  linux-virtxeon-stddevs.txt  macos-m4max-stddevs.txt  stddevs.txt
src/: main.rs
